--- a/AigisLoader/package.json
+++ b/AigisLoader/package.json
@@ -10,7 +10,9 @@
   "license": "ISC",
   "dependencies": {
     "child_process": "^1.0.2",
+    "dropbox": "^5.2.0",
     "iconv-lite": "^0.6.2",
+    "isomorphic-fetch": "^2.2.1",
     "jimp": "^0.14.0"
   }
 }
